Created a list view

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="33dp"
-        android:onClick="onClick"
-        android:text="@string/button_text" />
-
     <EditText
         android:id="@+id/message"
         android:layout_width="wrap_content"
@@ -34,4 +24,20 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="187dp"
         android:text="Please Enter Your Name:" />
+
+    <ListView
+        android:id="@+id/list_options"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:entries="@array/options" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="46dp"
+        android:onClick="onClick"
+        android:text="@string/button_text" />
 </RelativeLayout>
