--- a/app/src/main/res/layout/activity_drink.xml
+++ b/app/src/main/res/layout/activity_drink.xml
@@ -18,6 +18,9 @@
         android:id="@+id/checkBox7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="61dp"
         android:text="Iced Tea"
         tools:layout_editor_absoluteX="52dp"
         tools:layout_editor_absoluteY="322dp" />
@@ -26,6 +29,9 @@
         android:id="@+id/checkBox8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="132dp"
         android:text="Water"
         tools:layout_editor_absoluteX="52dp"
         tools:layout_editor_absoluteY="146dp" />
