--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -10,6 +10,9 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="28dp"
         android:text="Hamburger"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="239dp" />
@@ -18,6 +21,9 @@
         android:id="@+id/checkBox2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="127dp"
         android:text="Chicken Sandwich"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="190dp" />
@@ -26,6 +32,9 @@
         android:id="@+id/checkBox3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="188dp"
         android:text="Chicken Tenders"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="293dp" />
@@ -34,6 +43,8 @@
         android:id="@+id/checkBox4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:text="Hot Dog"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="348dp" />
@@ -42,6 +53,9 @@
         android:id="@+id/checkBox5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="77dp"
         android:text="French Fries"
         tools:layout_editor_absoluteX="41dp"
         tools:layout_editor_absoluteY="138dp" />
