Added comments to AddDrink, AddFood, activity_drink.xml, and activity_drink.xml

--- a/app/src/main/res/layout/activity_drink.xml
+++ b/app/src/main/res/layout/activity_drink.xml
@@ -7,6 +7,7 @@
     tools:context=".DrinkActivity"
     android:background="@color/white">
 
+    //Checkbox for soda
     <CheckBox
         android:id="@+id/checkBox6"
         android:layout_width="wrap_content"
@@ -15,6 +16,7 @@
         tools:layout_editor_absoluteX="52dp"
         tools:layout_editor_absoluteY="239dp" />
 
+    //Checkbox for Iced Tea
     <CheckBox
         android:id="@+id/checkBox7"
         android:layout_width="wrap_content"
@@ -26,6 +28,7 @@
         tools:layout_editor_absoluteX="52dp"
         tools:layout_editor_absoluteY="322dp" />
 
+    //Checkbox for Water
     <CheckBox
         android:id="@+id/checkBox8"
         android:layout_width="wrap_content"
@@ -37,6 +40,7 @@
         tools:layout_editor_absoluteX="52dp"
         tools:layout_editor_absoluteY="146dp" />
 
+    //Drink Image
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
@@ -44,6 +48,7 @@
         android:layout_centerInParent="true"
         android:src="@drawable/drink" />
 
+    //"Add to order" button for Drink's page
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
