--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,9 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/settings"
+        android:enabled="true"
         android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:orderInCategory="1"
+        android:showAsAction="ifRoom"
+        android:visible="true"/>
 
 </menu>
